# EEP25-Sumitup

./: .gitignore  README.md
backend/: README.md  config.py  main.py  pyproject.toml
backend/TEST_Newsletters/: IT_Brew_Jun_12.json  IT_Brew_Jun_13.json  TLDR_AI_Jun_10.json  TLDR_AI_Jun_12.json  TLDR_AI_Jun_13.json  TLDR_AI_Jun_5.json  response.json
backend/TEST_Newsletters/requests/: IT_Brew_Jun_12_llm_cleanup_prompt.txt  TLDR_AI_Jun_10_llm_cleanup_prompt.txt
backend/TEST_Newsletters/responses/: TLDR_AI_Jun_10_html_md_converter.json  TLDR_AI_Jun_10_llm_cleanup.md  TLDR_AI_Jun_13_html_md_converter.json  TLDR_AI_Jun_13_llm_cleanup.md  TLDR_AI_Jun_5_html_md_converter.json  TLDR_AI_Jun_5_llm_cleanup.md
backend/api/: __init__.py  newsletters_api.py
backend/database/: __init__.py  database.py
backend/helpers/: google_gemini_llm_cleanup_prompt.txt  helpers.py  mock_data.py
backend/helpers/system_instructions/: archived_prompt.md  ben_lorica_llm_cleanup_prompt.md  bytebytego_llm_cleanup_prompt.md  chinai_newsletter_llm_cleanup_prompt.md  google_gemini_llm_cleanup_prompt.md  last_week_in_ai_llm_cleanup_prompt.md  tech_brew_llm_cleanup_prompt.md  tldr_llm_cleanup_prompt.md
backend/logs/genai_requests/: TLDR AI <dan@tldrnewsletter.com>_2025-06-16 13:38:49 UTC_llm_cleanup_prompt.txt  (+2 more)
backend/models/: __init__.py  newsletter.py  sync_state.py
backend/scripts/: __init__.py  chromadb_script.py  db_datetime_script.py  db_embedding_script.py  vector_search_script.py
backend/services/: genai_service.py  gmail_service.py  pre_processing_service.py
