[project]
name = "backend"
version = "0.1.0"
description = "sumitup app backend service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.172.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.19.0",
    "google-generativeai>=0.8.5",
    "motor>=3.7.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.2",
    "requests>=2.32.3",
    "tenacity>=8.2.0",
    "uvicorn>=0.34.3",
]
